# QueryCraft

./: .env.example  .gitignore  AGENTS.md  README.md  audit.md  cookies.txt  docker-compose.dev.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_seed_admin_user.py  003_add_attempt_id_to_accepted_queries.py  004_add_sessions_and_extend_accepted_queries.py  005_add_result_payload_to_accepted_queries.py  006_phase3_multi_dialect_connections.py  007_phase5_sso_rbac_security.py  008_phase6_quotas_detection_audit_hardening.py  009_phase6_audit_search_indexes.py
backend/scripts/: seed_test_user.py  update_openapi_phase5.py
backend/src/: seed_e2e_connection.py
backend/src/app/: main.py
backend/tests/: conftest.py
backend/tests/acceptance/: conftest.py  test_auth_fixture.py  test_data_modifying_sql_blocked.py  test_multi_statement_blocked.py  test_query_timeout.py  test_schema_invalid_sql_blocked.py  test_session_conversation.py  test_unsafe_pattern_blocked.py  test_valid_select_passes.py
backend/tests/contract/: conftest.py  test_gemini_contract.py  test_history_contract.py  test_openapi_contract.py  test_phase6_contracts.py  test_schemathesis_admin.py  test_schemathesis_query.py
backend/tests/integration/: conftest.py  test_accept_only_persistence.py  test_accepted_query_repository.py  test_accepted_query_repository_cursor.py  test_admin_auth.py  test_admin_settings.py  test_api_auth.py  test_api_history.py  test_api_query.py  test_audit_export.py  test_audit_search.py  test_cross_dialect_policy.py  test_cross_dialect_quota.py  test_detection_admin.py  test_detection_coverage.py  test_detection_passthrough.py  test_evaluator_gate.py  test_execution_quota.py  test_f011_lock_leak.py  test_f013_migration_drift.py  test_feedback.py  test_history_cursor_validation.py  test_history_detail_validation.py  test_history_limit_validation.py  test_history_total_field.py  (+16 more)
(+673 files in other folders)
