[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "querycraft-backend"
version = "0.1.0"
description = "QueryCraft — Text-to-SQL Analytics Platform Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "alembic>=1.14.0,<2.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "sqlglot>=26.0.0,<27.0.0",
    "httpx>=0.28.0,<1.0.0",
    "argon2-cffi>=23.1.0,<24.0.0",
    "redis[hiredis]>=5.2.0,<6.0.0",
    "structlog>=24.4.0,<25.0.0",
    "opentelemetry-api>=1.29.0,<2.0.0",
    "opentelemetry-sdk>=1.29.0,<2.0.0",
    "cryptography>=44.0.0,<45.0.0",
    "tiktoken>=0.12.0",
    "asyncmy>=0.2.9,<1.0.0",
    "aioodbc>=0.5.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "testcontainers[postgres,redis]>=4.9.0,<5.0.0",
    "schemathesis>=3.38.0,<4.0.0",
    "ruff>=0.8.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "unit: Fast unit tests with no external service dependencies",
    "integration: Integration tests requiring external services",
    "acceptance: End-to-end acceptance tests using full app stack",
    "contract: Schemathesis contract tests (run on demand)",
    "lifecycle: Tests that opt into lifecycle invariant state leak detection",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "respx>=0.23.1",
]
